sumo/tests/netconvert/errors/xml_no_nod/options.netconvert
--xml-edge-files=%SUMO_DIST%\tests\netconvert\errors\xml_no_nod\hokkaido.edg.xml --output-file=net.net.xml
